# gemini-autodoc

./: .autodoc.yaml  .gitignore  README.md  install_hook.sh  pyproject.toml
.agent/scripts/: auto_doc.py  auto_doc_wrapper.sh
.agent/skills/: doc_updater.md
.agent/workflows/: doc-sync.md
.auto-doc/: requirements.txt
.auto-doc/scripts/: auto_doc.py  auto_doc_wrapper.sh
.autodoc/: config.sample.yaml  config.yaml
.autodoc/templates/: doc_prompt.j2  doc_skeleton.j2
autodoc/: __init__.py  cli.py  config.py
autodoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autodoc/commands/: init.py  sync.py
autodoc/core/: __init__.py  doc_generator.py  gemini_client.py
autodoc/hooks/: post_commit.py
autodoc/templates/: default_prompt.j2  doc_prompt.j2  doc_skeleton.j2  system_instruction.j2
autodoc/utils/: __init__.py  env_loader.py  git_handler.py  logger.py
docs/: API.md  commands.md  config_file.md  configuration.md  core.md  phase3_plan.md  refactor_plan.md  templates.md  utils.md
docs_old/: commands.md  config_file.md  core.md  utils.md
src/: main.py
